Set input add-on height/line-height to @baseline (vs 18px explicitly)

--- a/lib/forms.less
+++ b/lib/forms.less
@@ -343,11 +343,11 @@ textarea[readonly] {
     display: block;
     width: auto;
     min-width: 16px;
-    height: 18px;
+    height: @baseline;
     padding: 4px 4px 4px 5px;
     margin-right: -1px;
     font-weight: normal;
-    line-height: 18px;
+    line-height: @baseline;
     color: @grayLight;
     text-align: center;
     text-shadow: 0 1px 0 @white;
